--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:theme="@style/Theme.FoodPlanner"
         tools:targetApi="31">
         <activity
-            android:name=".AuthActivity"
+            android:name=".MealDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".auth.AuthActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
