--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,13 @@
         android:theme="@style/Theme.FoodPlanner"
         tools:targetApi="31">
         <activity
+            android:name=".AppNavigationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".appNavigation.AppNavigationActivity"
+            android:exported="false"
+            android:label="@string/title_activity_home" />
+        <activity
             android:name=".AuthActivity"
             android:exported="false" />
         <activity
