--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -16,7 +17,7 @@
             android:exported="false"
             android:label="@string/title_activity_home" />
         <activity
-            android:name=".MealDetailsActivity"
+            android:name=".MealDeails.view.MealDetailsActivity"
             android:exported="false" />
         <activity
             android:name=".auth.AuthActivity"
