--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.8'
 
     implementation 'com.ramotion.paperonboarding:paper-onboarding:1.1.3'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
