video and ingredients

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,13 @@ dependencies {
     //shimmer
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
+    //Youtube video
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:11.1.0'
+    implementation files('libs\\YouTubeAndroidPlayerApi.jar')
+
+    //Rx android
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+
+
 }
