--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,5 +78,9 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
     implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
 
+    //Rx retrofit adapter
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
+    implementation "androidx.room:room-rxjava3:$room_version"
+
 
 }
