--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,20 @@
         android:theme="@style/Theme.FoodPlanner"
         tools:targetApi="31">
         <activity
-            android:name=".category.view.CategoryActivity"
+            android:name=".country.view.CountryActivity"
             android:exported="false"
             android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity
-            android:name=".appNavigation.search.view.SearchByNameActivity"
+            android:name=".ingredient.view.IngredientActivity"
             android:exported="false"
-            />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity
+            android:name=".category.view.CategoryActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity
+            android:name=".appNavigation.search.view.SearchByNameActivity"
+            android:exported="false" />
         <activity
             android:name=".appNavigation.AppNavigationActivity"
             android:exported="false"
